# godot-gdext-demo

./: .gitignore  Makefile  PLAN.md  README.md
.github/workflows/: ci.yml
godot/: export_presets.cfg  godot_gdext_demo.gdextension  project.godot
godot/.godot/: extension_list.cfg
godot/scenes/: ball.tscn  game.tscn  hello.tscn  holder.tscn
godot/scenes/level_data/: level_01.tres
godot/scripts/: ball.gd  ball_queue.gd  center_area.gd  game.gd  holder.gd  holder_grid.gd  level_data.gd  palette.gd  staging_area.gd
rust/: rust-toolchain.toml
rust/game/: Cargo.toml
rust/game/src/: constants.rs  game.rs  hello_node.rs  lib.rs  map_node.rs  team.rs  unit.rs
