[package]
name = "godot-gdext-demo"
version = "0.1.0"
edition = "2021"

[lib]
name = "godot_gdext_demo"
crate-type = ["cdylib", "staticlib"]

[features]
# Enable for a no-threads wasm build (broader browser/host compatibility).
# Used by: make build-wasm
nothreads = [
    "godot/experimental-wasm",
    "godot/experimental-wasm-nothreads",
    "godot/lazy-function-tables",
]

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
